# OsterMath-Backend

./: .gitignore  Any.cpp  BoundFormulas.g4  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  README.md  TestSerialization.omb  cmake_install.cmake  compile_commands.json  nodes_test[1]_include.cmake  nodes_test[1]_tests.cmake  range_node.txt  specificvolume.h  zone.h  zonebound.cpp  zonebound.h
Data/: config.json  zone3.json
Data/boundaries/: temperatures.txt
Data/regions/: reg3g.data.txt  reg3l.data.txt  reg3q.data.txt
antlr4_runtime/: CTestTestfile.cmake  Makefile  cmake_install.cmake
antlr4_runtime/runtime/: CTestTestfile.cmake  Makefile  antlr4_tests  antlr4_tests[1]_include.cmake  antlr4_tests[1]_tests.cmake  cmake_install.cmake
antlr4cpp_generated_src/detect_type_function/: detect_type_function.cpp  detect_type_function.h  detect_type_function.interp  detect_type_functionBaseListener.cpp  detect_type_functionBaseListener.h  detect_type_functionListener.cpp  detect_type_functionListener.h
antlr4cpp_generated_src/head_interactor/: head_interactor.cpp  head_interactor.h  head_interactor.interp  head_interactor.tokens  head_interactorBaseListener.cpp  head_interactorBaseListener.h  head_interactorListener.cpp  head_interactorListener.h
antlr4cpp_generated_src/main_lexics/: main_lexics.cpp  main_lexics.h  main_lexics.tokens
archive/: FunctionNodeFunctionsToCheckFurther.cpp
arithmetictree/: CMakeLists.txt
arithmetictree/grammar/: CMakeLists.txt  ParseRules.g4  detect_type_function.g4  head_interactor.g4
arithmetictree/grammar/.antlr/: ParseRulesBaseListener.java  ParseRulesLexer.java  ParseRulesLexer.tokens  ParseRulesListener.java  ParseRulesParser.java
arithmetictree/grammar/antlr4_runtime/: CMakeLists.txt  CTestTestfile.cmake
arithmetictree/grammar/antlr4_runtime/runtime/: CTestTestfile.cmake  antlr4_tests[1]_include.cmake
arithmetictree/include/: arithmetic_functions.h  arithmetic_tree.h  arithmetic_types.h  bound.h  data.h  def.h  domain.h  exception.h  expr_lexer.h  expr_listener.h  expr_parser.h  format.h  serialize.h  types.h
arithmetictree/include/detector/: detector.h
arithmetictree/include/exception/: bailerror.h  exception.h
arithmetictree/include/types/: array_node.h  bin_node.h  expression.h  func_node.h  node.h  range_node.h  unary_node.h  val_node.h  var_node.h
arithmetictree/src/: arithmetic_functions.cpp  arithmetic_tree.cpp  arithmetic_types.cpp  bound.cpp  data.cpp  def.cpp  exception.cpp  expr_listener.cpp  expr_parser.cpp  format.cpp  serialize.cpp  types.cpp
arithmetictree/src/exception/: exception.cpp
arithmetictree/src/types/: array_node.cpp  bin_node.cpp  func_node.cpp  node.cpp  range_node.cpp  unary_node.cpp  val_node.cpp  var_node.cpp
description_dev/: range_node.txt
detector/: CMakeLists.txt
detector/include/: def.h  detector.h  detectorLexer.h  detectorListener.h  detectorParser.h
detector/src/: detector.cpp  detectorListener.cpp  detectorParser.cpp
grammar/: CMakeLists.txt  Equation.g4  Equation.interp  Equation.tokens  EquationBaseListener.java  EquationLexer.interp  EquationLexer.java  EquationLexer.tokens  EquationListener.java  EquationParser.java  ParseRules.g4  bound.g4  boundBaseListener.java  boundLexer.java  boundListener.java  boundParser.java  bound_coefs.g4  common_parse_rules.g4  definitions.g4  detect_type_function.g4  detector_parser.cmake  equation.g4  equation.interp  equation.tokens  equationBaseListener.java  equationLexer.interp  equationLexer.java  equationListener.java  equationParser.java  fundamental.g4  head_interactor.cmake  head_interactor.g4  main_lexics.g4  regions.g4
grammar/.antlr/: common_parse_rules.interp  common_parse_rules.java  detect_type_function.interp  detect_type_function.java  detect_type_functionBaseListener.java  detect_type_functionLexer.interp  detect_type_functionLexer.java  detect_type_functionListener.java  detect_type_functionParser.java  fundamental.interp  fundamental.java  fundamental.tokens  fundamentalLexer.interp  fundamentalLexer.java  fundamentalLexer.tokens  head_interactor.interp  head_interactor.java  head_interactorBaseListener.java  head_interactorLexer.java  head_interactorListener.java  head_interactorParser.java  main_lexics.interp  main_lexics.java  main_lexics.tokens
grammar/antlr4_runtime/: CTestTestfile.cmake  Makefile  cmake_install.cmake
grammar/antlr4_runtime/runtime/: CTestTestfile.cmake  Makefile  antlr4_tests[1]_include.cmake  cmake_install.cmake
include/: FormulaAST.h  arithmetic_functions.h  arithmetic_tree.h  arithmetic_types.h  config.h  correlation.h  data.h  def.h  exception.h  expr_listener.h  expr_parser.h  format.h  formula.h  function_proxy.h  reader.h  specificvolume.h  types.h  zone.h  zonebound.h
include/core/: codes.h  model_threads.h  settings.h  sys_exceptions.h  system.h  threads.h
include/data/: data.h
include/events_errors/: abstract_event.h  check_val_type.h  exception.h  warning.h
include/head_interactor/: expr_lexer.h  expr_listener.h  expr_parser.h
include/nodes/: arithmetic_functions.h  arithmetic_types.h  data.h  def.h  domain.h  node_manager.h  relation_manager.h  serialize.h  types.h  Диаграмма без названия.drawio
include/test/: shared_fstream.h  shared_stream.h  (+2 more)
parsing/: CMakeLists.txt
parsing/grammar/: CMakeLists.txt
parsing/grammar/antlr4_runtime/: CTestTestfile.cmake
parsing/grammar/antlr4_runtime/runtime/: CTestTestfile.cmake  antlr4_tests[1]_include.cmake
parsing/include/: arithmetic_functions.h  arithmetic_tree.h  arithmetic_types.h  data.h  expr.h  expr_lexer.h  reader.h
parsing/src/: arithmetic_tree.cpp  main.cpp  reader.cpp  types.cpp
src/: FormulaAST.cpp  arithmetic_functions.cpp  arithmetic_tree.cpp  arithmetic_types.cpp  data.cpp  def.cpp  expr_listener.cpp  formula.cpp  main.cpp  reader.cpp  serialize.cpp  specificvolume.cpp  types.cpp  zonebound.cpp
test_logs/: Begins  DifferentSizeVars  Example_2  Find_first_node_not_variable_by_ids  Insert_Back  NotDefined_1_DimensionsTwinArrayVars  out.xml
(+135 files in other folders)
